--- a/css/hestus.css
+++ b/css/hestus.css
@@ -1,5 +1,5 @@
-/*! bulma.io v0.9.2 | MIT License | github.com/jgthms/bulma */
-/* Bulma Utilities */
+
+/* Hestus Utilities */
 .button, .input, .textarea, .select select, .file-cta,
 .file-name, .pagination-previous,
 .pagination-next,
@@ -11735,4 +11735,3 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
-/*# sourceMappingURL=bulma.css.map */
